2004-03-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/s390/dl-tls.h: Only add __tls_get_offset assembly if
	IS_IN_rtld.
	(__TLS_GET_ADDR): Use __tls_get_offset, not __tls_get_addr.

2004-03-11  Ulrich Drepper  <drepper@redhat.com>

	* resolv/ns_ttl.c: Don't add ns_parse_ttl for libresolv.so.

2004-03-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/errno.c: Include <dl-sysdep.h>.  Use
	RTLD_PRIVATE_ERRNO to decide whether errno compat symbols are needed.

	* elf/dl-sym.c: Unify _dl_sym and _dl_vsym code and make the entry
	points wrappers around the unified code.

2004-03-11  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/kernel_stat.h (kernel_stat64): New.
	(glibc21_stat): New.
	* sysdeps/unix/sysv/linux/alpha/fxstat.c: New file.
	* sysdeps/unix/sysv/linux/alpha/lxstat.c: New file.
	* sysdeps/unix/sysv/linux/alpha/xstat.c: New file.
	* sysdeps/unix/sysv/linux/alpha/xstatconv.c (__xstat_conv): Add
	code for _STAT_VER_GLIBC2_3_4.
	(__libc_missing_axp_stat64): New.
	* sysdeps/unix/sysv/linux/alpha/xstatconv.h: New file.
	* sysdeps/unix/sysv/linux/alpha/bits/stat.h (__ST_TIME): New.
	(_STAT_VER_GLIBC2_3_4, _STAT_VER_KERNEL64): New.
	(struct stat, struct stat64): Update to new format.
	(_STATBUF_ST_NSEC): New.

2004-03-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/swapcontext.S
	(__novec_swapcontext): Branch to novec_* labels.

2004-03-10  Ulrich Drepper  <drepper@redhat.com>

	* posix/getopt.c (_): Don't define here for glibc.

2004-03-10  Jakub Jelinek  <jakub@redhat.com>

	* include/libc-symbols.h [__ASSEMBLY__] (compat_text_section,
	compat_data_section): Define.
	* sysdeps/unix/sysv/linux/alpha/adjtime.c (ADJTIME): Add
	attribute_compat_text_section.
	* sysdeps/unix/sysv/linux/alpha/wordexp.c (__old_wordexp): Likewise.
	* sysdeps/unix/sysv/linux/alpha/oldglob.c (__old_glob,
	__old_globfree): Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/chown.c (__chown_is_lchown):
	Likewise.